fix: padroniza delete(), .toList(), @Transactional — lote 2 (Checklist, Documento, Empresa, Equipamento, EquipamentoProjeto, Feedback, Fornecedor)