@@ -5,9 +5,9 @@ import com.br.pruma.application.dto.response.DocumentoResponseDTO;
 import com.br.pruma.application.dto.update.DocumentoUpdateDTO;
 import com.br.pruma.application.mapper.DocumentoMapper;
 import com.br.pruma.application.service.DocumentoService;
+import com.br.pruma.config.RecursoNaoEncontradoException;
 import com.br.pruma.core.domain.Documento;
 import com.br.pruma.core.repository.DocumentoRepository;
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,13 +34,16 @@ public class DocumentoServiceImpl implements DocumentoService {
     @Transactional(readOnly = true)
     public DocumentoResponseDTO getById(Integer id) {
         return mapper.toResponse(repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Documento não encontrado: " + id)));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Documento com ID " + id + " não encontrado.")));
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<DocumentoResponseDTO> listAll() {
-        return repository.findAll().stream().map(mapper::toResponse).collect(Collectors.toList());
+        return repository.findAll().stream()
+                .map(mapper::toResponse)
+                .toList();
     }
 
     @Override
@@ -53,16 +55,17 @@ public class DocumentoServiceImpl implements DocumentoService {
     @Override
     public DocumentoResponseDTO update(Integer id, DocumentoUpdateDTO dto) {
         Documento entity = repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Documento não encontrado: " + id));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Documento com ID " + id + " não encontrado."));
         mapper.updateFromDto(dto, entity);
         return mapper.toResponse(repository.save(entity));
     }
 
     @Override
     public void delete(Integer id) {
-        if (!repository.existsById(id)) {
-            throw new EntityNotFoundException("Documento não encontrado: " + id);
-        }
-        repository.deleteById(id);
+        Documento entity = repository.findById(id)
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Documento com ID " + id + " não encontrado."));
+        repository.delete(entity);
     }
 }
