@@ -5,9 +5,9 @@ import com.br.pruma.application.dto.response.EmpresaResponseDTO;
 import com.br.pruma.application.dto.update.EmpresaUpdateDTO;
 import com.br.pruma.application.mapper.EmpresaMapper;
 import com.br.pruma.application.service.EmpresaService;
+import com.br.pruma.config.RecursoNaoEncontradoException;
 import com.br.pruma.core.domain.Empresa;
 import com.br.pruma.core.repository.EmpresaRepository;
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,13 +34,16 @@ public class EmpresaServiceImpl implements EmpresaService {
     @Transactional(readOnly = true)
     public EmpresaResponseDTO getById(Integer id) {
         return mapper.toResponse(repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Empresa não encontrada: " + id)));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Empresa com ID " + id + " não encontrada.")));
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<EmpresaResponseDTO> listAll() {
-        return repository.findAll().stream().map(mapper::toResponse).collect(Collectors.toList());
+        return repository.findAll().stream()
+                .map(mapper::toResponse)
+                .toList();
     }
 
     @Override
@@ -53,7 +55,8 @@ public class EmpresaServiceImpl implements EmpresaService {
     @Override
     public EmpresaResponseDTO update(Integer id, EmpresaUpdateDTO dto) {
         Empresa entity = repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Empresa não encontrada: " + id));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Empresa com ID " + id + " não encontrada."));
         mapper.updateFromDto(dto, entity);
         return mapper.toResponse(repository.save(entity));
     }
@@ -61,7 +64,8 @@ public class EmpresaServiceImpl implements EmpresaService {
     @Override
     public EmpresaResponseDTO replace(Integer id, EmpresaRequestDTO dto) {
         repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Empresa não encontrada: " + id));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Empresa com ID " + id + " não encontrada."));
         Empresa entity = mapper.toEntity(dto);
         entity.setId(id);
         return mapper.toResponse(repository.save(entity));
@@ -69,9 +73,9 @@ public class EmpresaServiceImpl implements EmpresaService {
 
     @Override
     public void delete(Integer id) {
-        if (!repository.existsById(id)) {
-            throw new EntityNotFoundException("Empresa não encontrada: " + id);
-        }
-        repository.deleteById(id);
+        Empresa entity = repository.findById(id)
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Empresa com ID " + id + " não encontrada."));
+        repository.delete(entity);
     }
 }
